<resources>
    <string name="app_name">AndroidDevProject</string>
    <string name="bored">Bored</string>
    <string name="motivated">Motivated</string>
    <string name="happy">Happy</string>
    <string name="annoyed">Annoyed</string>
    <string name="angry">Angry</string>
    <string name="sad">Sad</string>
    <string name="textview">TextView</string>
    <string name="submit">Submit</string>
    <string name="mood">Mood</string>
</resources>