<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmood1"
    tools:context=".Mood">

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:backgroundTint="@color/mauve"
        app:layout_constraintStart_toEndOf="@+id/radGroupEmotions"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblShow"
        android:layout_width="172dp"
        android:layout_height="68dp"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="64dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radGroupEmotions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radHappy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/happy"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radMotivated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motivated"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radBored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bored"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radAnnoyed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/annoyed"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radAngry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/angry"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radSad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sad"
            android:textSize="16sp" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBarIntensity"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="45dp"
        android:max="100"
        android:min="0"
        android:progress="10"
        app:layout_constraintBottom_toTopOf="@+id/lblShow"
        app:layout_constraintEnd_toStartOf="@+id/lblShowIntensity"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblShowIntensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:text="Rate your mood intensity"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/seekBarIntensity"
        app:layout_constraintTop_toTopOf="@+id/seekBarIntensity" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="10dp"
        android:text="Back"
        android:backgroundTint="@color/mauve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblShow" />

</androidx.constraintlayout.widget.ConstraintLayout>